--- a/index.html
+++ b/index.html
@@ -5,6 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width" />
 
+    <link rel="manifest" href="manifest.json" />
+
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="Airhorn" />
+    <meta name="apple-mobile-web-app-title" content="Airhorn" />
+    <meta name="theme-color" content="#4c6085" />
+    <meta name="msapplication-navbutton-color" content="#4c6085" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta name="msapplication-starturl" content="/" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <link rel="icon" type="image/svg+xml" sizes="192x192" href="airhorn.svg" />
+    <link
+      rel="apple-touch-icon"
+      type="image/svg+xml"
+      sizes="192x192"
+      href="airhorn.svg"
+    />
+
     <title>Outlaw Airhorn</title>
 
     <!--[if lt IE 9]>
@@ -46,6 +72,7 @@
         border: 0;
         background: none;
         cursor: pointer;
+        flex: 1;
       }
 
       .play svg {
@@ -60,7 +87,6 @@
 
       footer {
         justify-content: space-around;
-        flex: 1;
         font-size: 10px;
       }
 
@@ -94,7 +120,12 @@
 
     <footer>
       <p class="copy">
-        <a href="https://github.com/outlaw-ux/outlaw-airhorn" target="_blank" rel="noopener noreferrer">Made with &hearts; by OutlawUX</a>
+        <a
+          href="https://github.com/outlaw-ux/outlaw-airhorn"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Made with &hearts; by OutlawUX</a
+        >
       </p>
     </footer>
   </body>
