--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <link rel="manifest" href="manifest.json" />
 
@@ -57,9 +57,9 @@
 
       body {
         display: flex;
-        flex-direction: column-reverse;
+        flex-direction: column;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: space-evenly;
         height: 100vh;
         overflow: hidden;
         background-color: #32322c;
@@ -75,6 +75,7 @@
         background: none;
         cursor: pointer;
         flex: 1;
+        max-height: 75vh;
       }
 
       .play svg {
@@ -88,7 +89,6 @@
       }
 
       footer {
-        justify-content: space-around;
         font-size: 10px;
       }
 
